# waddleml

./: .gitignore  AGENTS.md  README.md  pyproject.toml
archive/: README.md
archive/evidence/: .gitignore  evidence.config.yaml  package-lock.json
archive/evidence/pages/: compare.md  index.md
archive/evidence/pages/runs/: [run_id].md
archive/evidence/sources/waddle/: attempts.sql  connection.yaml  metric_keys.sql  progress.sql  run_metric_latest.sql  run_tags.sql  runs.sql  system_metrics.sql
docs/: ARCHITECTURE.md  AUTORESEARCH-FUSION-2026-07.md  WANDB-FUSION-2026-07.md
evidence/: package.json
evidence/pages/: compare.md  index.md  runs.md
evidence/pages/runs/: [run_id].md
evidence/sources/waddle/: run_metrics.sql  run_metrics_ds.sql  run_params.sql
examples/: classification.py  hyperparameter_sweep.py  linear_regression.py  quickstart.py
examples/reports/: capture-and-training.md  training-overview.md
tests/: test_api.py  test_distributed_lineage.py  test_purity.py  test_sync.py  test_waddle.py
tests/server/: conftest.py  test_artifacts.py  test_ch_integration.py  test_ingest_contract.py  test_isolation.py  test_quotas_and_migrations.py  test_reports_api.py  test_reports_compile.py  test_sqlbox.py  test_staging_cache.py
ui/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  main.tsx  query-client.ts  styles.css
ui/src/api/: client.ts  openapi.json  schema.gen.ts  types.ts
ui/src/components/: AppShell.tsx  MetricChart.tsx  MetricPanel.tsx
ui/src/components/report/: BlockRenderer.tsx  EChart.tsx  ErrorBanner.tsx  ReportEditor.tsx  XYChart.tsx  charts.ts  completions.ts  editorTheme.ts  inputs.tsx  registry.tsx
ui/src/components/research/: HypothesisTreeMap.tsx  ResearchListRow.tsx  ResearchSynthesis.tsx  ResearchTrajectoryChart.tsx  SessionExperimentTree.tsx
ui/src/lib/: format.ts  reportFormat.ts  research.ts
ui/src/pages/: ComparePage.tsx  LaunchPage.tsx  ProjectsPage.tsx  ReportEditorPage.tsx  ReportPage.tsx  ReportViewPage.tsx  ReportsPage.tsx  ResearchPage.tsx  ResearchRunPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SqlPage.tsx
waddle/: README.md  __init__.py  _api.py  _db.py  _git.py  _run.py  _schema.py  _sync.py  _sysmetrics.py  _types.py  cli.py
waddle_server/: __init__.py  config.py  errors.py  mcp.py  model.py  reports.py
waddle_server/migrations/: 0001_init.sql  0002_artifacts.sql  0003_reports.sql  0004_report_identity.sql  0005_run_environment.sql  0006_research_outcomes.sql
waddle_server/server/: app.py  artifacts.py  auth.py  ch.py  db.py  quotas.py  repo.py  schemas.py  storage.py
waddle_server/sqlbox/: __init__.py  child.py
waddle_server/tools/: dump_openapi.py
waddle_server/worker/: compact.py
