[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waddleml"
version = "0.2.0"
description = "Lightweight, SQL-native ML experiment tracking with DuckDB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brian Guarraci" },
]
keywords = [
    "machine-learning",
    "experiment-tracking",
    "mlops",
    "duckdb",
    "wandb",
    "weights-and-biases",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
system = ["psutil>=5.9.0"]
gpu = ["pynvml>=11.5.0"]
all = ["psutil>=5.9.0", "pynvml>=11.5.0"]

[project.scripts]
waddle = "waddle.cli:main"

[project.urls]
Homepage = "https://github.com/Sentient-X/waddleml"
Repository = "https://github.com/Sentient-X/waddleml"
Issues = "https://github.com/Sentient-X/waddleml/issues"

# Hatchling ships the whole package dir (py.typed included) and emits path-based
# editables that pyright can resolve — the workspace norm. The Evidence dashboard
# (evidence/) is a dev tool that lives beside the package, not shipped in the wheel.
[tool.hatch.build.targets.wheel]
packages = ["waddle"]
